Fix overflowing of long titles in listings

--- a/app/assets/stylesheets/elements/_listings.scss
+++ b/app/assets/stylesheets/elements/_listings.scss
@@ -45,7 +45,7 @@
   justify-content: space-between;
   padding: .15em;
 
-  a {
+  span:first-child {
     display: block;
     width: 75%;
     max-width: 20em;
